﻿v1.4.9

Note: 
* The Event model isn't working as intended. It'll not break, however event removal blocks pass-through to the game world. I'm converting all Frame events to work as it was intended. As soon as Trion fix their end, KBM will work as planned.

System
* Drag Frames
** Change: Updated to new event model.
* KBM Button
** Change: Updated to new event model.
** Fixed: Restored functionality to move the button.

Ready Check
* Change: Converted Button systems over to new event model.
* Change: Prevented errors with corrupt or incorrect settings.
* Change: Optimized performance.
* Change: Converted to new Rift text renderer for all shadow effects. (Reduced memory footprint)

Res Master
* Fixed: Issues with resizing while Res Frames where active.

LibSUnit
* Fixed: Rare Error 1112. Possibly due to lag.
* Fixed: Minor memory leak during some target changes. Unknown Side effects, which could possibly cause the above over long periods.
* Fixed: Accuracy of tracking when units are created via target changes.
* Changed: Optimized some Raid management code.
* Note: The above fixes and change should see an improvement on memory management and performance.

Slash Command "/kbmdefault menu"
* Fixed: Updated to point to new menu system.

Percentage Monitor
* Fixed: Settings are applied more reliably upon start-up.
* Change: Updated to new event model.
* Change: Optimized performance slightly.
* Change: Converted to new Rift text renderer for all shadow effects. (Reduced memory footprint)

Chronicles
* Queens Gambit
** New: Och and Krock
*** New: Added Encounter tracking.
*** New: Added HP Tracking. (Percentage Monitor)

Translations
* French Updates

----
v1.4.8

Ready Check
* Stones
** New: Tracking for Coruscating Powerstone.
** New: Tracking for Exceptional Whetstone.
** New: Tracking for Exceptional Oilstone.
* Potions
** New: Tracking for Prime Brightsurge Vial.
** New: Tracking for Prime Powersurge Vial.
** New: Tracking for Prime Enduring Vial.