@@ -46,6 +46,7 @@ GLD.Lang.Unit.VortexShort:SetGerman("Wirbel")
 GLD.Lang.Unit.VortexShort:SetFrench("Vortex")
 GLD.Lang.Unit.Amrian = KBM.Language:Add("Amrian")
 GLD.Lang.Unit.Amrian:SetFrench()
+GLD.Lang.Unit.Amrian:SetGerman()
 
 -- Ability Dictionary
 GLD.Lang.Ability = {}
@@ -57,6 +58,7 @@ GLD.Lang.Ability.Cascade:SetGerman("Reißende Kaskade")
 GLD.Lang.Ability.Cascade:SetFrench("Cascade lacérante")
 GLD.Lang.Ability.Blizzard = KBM.Language:Add("Razorwind Blizzard")
 GLD.Lang.Ability.Blizzard:SetFrench("Blizzard de vent tranchant")
+GLD.Lang.Ability.Blizzard:SetGerman("Klingenwindblizzard")
 
 -- Description Dictionary
 GLD.Lang.Main = {}
@@ -76,7 +78,9 @@ GLD.Lang.Debuff.Spasm:SetFrench("Spasmes voltaïques")
 GLD.Lang.Debuff.SpasmID = "BFF08536BF6417E05"
 GLD.Lang.Debuff.Induction = KBM.Language:Add("Hypothermic Induction")
 GLD.Lang.Debuff.Induction:SetFrench("Induction hypothermique")
+GLD.Lang.Debuff.Induction:SetGerman("Unterkühlungsinduktion")
 GLD.Lang.Debuff.Chill = KBM.Language:Add("Deathly Chill")
+GLD.Lang.Debuff.Chill:SetGerman("Tödliche Kälte")
 
 GLD.Lang.Messages = {}
 GLD.Lang.Messages.Phase2 = KBM.Language:Add("Phase 2 starts")
